[package]
name = "fractal-march"
version = "0.1.0"
authors = ["Arden Rasmussen <ardenisthebest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
num = "*"
clap = "*"
rayon = "*"
indicatif = {version = "*", features = ["with_rayon"]}
scarlet = "*"
ndarray = "*"